--- a/src/app/componentes/plato/crear-plato/crear-plato.component.html
+++ b/src/app/componentes/plato/crear-plato/crear-plato.component.html
@@ -1,1 +1,26 @@
-<p>crear-plato works!</p>
+
+
+<form>
+  <div class="mb-3">
+    <input type="text" class="form-control" id="titulo" placeholder="Titulo del plato">
+  </div>
+
+  <div class="input-group mb-3">
+    <span class="input-group-text">€</span>
+    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Precio plato">
+    <span class="input-group-text">.00</span>
+  </div>
+
+  <div class="mb-3">
+    <label for="formFile" class="form-label">Imagen del plato</label>
+    <input class="form-control" type="file" id="formFile">
+  </div>
+
+  <div class="mb-3">
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Descripción del plato"></textarea>
+  </div>
+
+  <button type="submit" class="btn btn-primary">Guardar</button>
+</form>
+
+
