parte componente reserva

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,22 @@
   <mat-sidenav mode="side" opened class="example-sidenav"
                [fixedInViewport]="false" [fixedTopGap]="0"
                [fixedBottomGap]="0">
-    Sidenav
+<!--                <a class="nav-link " routerLink="/plato">Catalogo platos</a>
+               <a class="nav-link" routerLink="/reserva">Hacer reserva</a>
+               <a class="nav-link" routerLink="/about"></a> -->
+
+               <mat-selection-list #shoes [multiple]="false">
+                <a class="nav-link" routerLink="/plato">
+                  <mat-list-option>
+                  Catálogo platos
+                </mat-list-option>
+                </a>
+                <a class="nav-link" routerLink="/reserva">
+                  <mat-list-option>
+                    Hacer reserva
+                </mat-list-option>
+                </a>
+              </mat-selection-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
