--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,13 +11,17 @@
   align-items: center;
   justify-content: center;
   width: 200px;
-  background: rgba(255, 0, 0, 0.5);
-}
+  background: rgb(129, 25, 25);
 
+}
 
 .example-footer {
   position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+a{
+  color: white !important;
 }
