--- a/src/app/componentes/reserva/reserva.component.html
+++ b/src/app/componentes/reserva/reserva.component.html
@@ -1,1 +1,105 @@
-<p>reserva works!</p>
+impo
+
+<div class="loginImg">
+  <ng-container [ngSwitch]="stepperOrientation | async">
+    <div *ngSwitchCase="'horizontal'"></div>
+    <div *ngSwitchCase="'vertical'"></div>
+  </ng-container>
+
+  <div class="container">
+
+    <div class="row justify-content-center pt-5">
+      <mat-stepper class="example-stepper " [orientation]="(stepperOrientation | async)!">
+
+        <!-- FECHA -->
+        <mat-step [stepControl]="firstFormGroup" label="Día de la reserva">
+          <form [formGroup]="firstFormGroup">
+
+            <mat-form-field color="accent" appearance="fill">
+              <mat-label>Elije la fecha</mat-label>
+              <input matInput [matDatepicker]="picker2">
+              <mat-hint>dia/mes/año</mat-hint>
+              <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+              <mat-datepicker #picker2 color="primary"></mat-datepicker>
+            </mat-form-field>
+            <p>Tu día de reserva es: </p>
+            <div>
+              <button mat-raised-button color="accent" matStepperNext>Siguente</button>
+            </div>
+
+          </form>
+        </mat-step>
+
+        <!-- FRANJA HORARIA -->
+        <mat-step [stepControl]="firstFormGroup" label="Franja horaria de la reserva">
+        <form [formGroup]="secondFormGroup">
+
+          <mat-form-field color="accent" appearance="fill">
+            <mat-label>Elige la franja horaria</mat-label>
+            <mat-select [(ngModel)]="selectedValue" name="food">
+              <mat-option *ngFor="let food of foods" [value]="food.value">
+                {{food.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <p> Tu franja horaria: {{selectedValue}} </p>
+          <div>
+            <button mat-raised-button color="accent" matStepperNext>Siguente</button>
+          </div>
+        </form>
+      </mat-step>
+
+
+      <!-- PLATOS -->
+      <mat-step [stepControl]="thirdFormGroup" label="Platos de la reserva">
+        <form [formGroup]="thirdFormGroup">
+        <h4>mat-select</h4>
+        <mat-form-field appearance="fill">
+          <mat-label>Elige los platos</mat-label>
+          <mat-select [formControl]="foodControl" name="food">
+            <mat-option>None</mat-option>
+            <mat-option *ngFor="let food of foods" [value]="food.value">
+              {{food.viewValue}}
+            </mat-option>
+          </mat-select>
+           </mat-form-field>
+        <p>Selected: {{foodControl.value}}</p>
+        <div>
+          <button mat-raised-button color="accent" matStepperNext>Siguente</button>
+        </div>
+      </form>
+    </mat-step>
+
+
+       <!-- CONFIRMACIÓN DATOS  -->
+       <mat-step [stepControl]="thirdFormGroup" label="Confirmar la reserva">
+        <form [formGroup]="thirdFormGroup">
+
+          <mat-form-field color="accent" appearance="fill">
+            <mat-label>Elige los platos</mat-label>
+            <mat-select [(ngModel)]="selectedValue" name="food">
+              <mat-option *ngFor="let food of foods" [value]="food.value">
+                {{food.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <p> Tu franja horaria: {{selectedValue}} </p>
+          <div>
+            <button mat-raised-button color="accent" matStepperNext>Siguente</button>
+          </div>
+        </form>
+      </mat-step>
+
+
+        <mat-step>
+          <ng-template matStepLabel>Hecho</ng-template>
+          <p>You are now done.</p>
+          <div>
+            <button mat-button matStepperPrevious>Back</button>
+          </div>
+        </mat-step>
+      </mat-stepper>
+    </div>
+  </div>
+
+</div>
