--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -25,6 +25,7 @@
   height:100vh;
   max-width: 100%;
   max-height: 100%;
+  background-size:cover;
   background-repeat: no-repeat;
   object-fit: contain;
   background-image: url(../../assets/img/login.jpg);
