--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -13,10 +13,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-105%, -50%);
   width: 35rem;
   background-color: black;
-  opacity: 0.9;
+  opacity: 0.7;
   border-radius: 15px;
 }
 
@@ -25,7 +25,11 @@
   height:100vh;
   max-width: 100%;
   max-height: 100%;
+  background-size:cover;
   background-repeat: no-repeat;
+  background-image: url(../../assets/img/salad-2068220_960_720.jpg);
   object-fit: contain;
-  background-image: url(../../assets/img/login.jpg);
+
 }
+
+
