--- a/src/app/componentes/reserva/reserva.component.scss
+++ b/src/app/componentes/reserva/reserva.component.scss
@@ -20,4 +20,15 @@
 
 button{
   background-color: rosybrown !important;
+  margin-left: 0.8%;
 }
+
+.button-reserva{
+  width: 100vw;
+}
+
+.button-fecha{
+  width: 18%;
+}
+
+
