--- a/src/app/componentes/plato/crear-plato/crear-plato.component.scss
+++ b/src/app/componentes/plato/crear-plato/crear-plato.component.scss
@@ -1,7 +1,35 @@
-form {
+/* form {
   width: 700px;
   margin: 200px;
   margin-left: 522px;
+
+} */
+
+.crearPlatoImg{
+  position: relative;
+  height:100vh;
+  max-width: 100%;
+  max-height: 100%;
+  background-size:cover;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  background-image: url(../../../../assets/img/registro.jpg);
 }
 
+
+form{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35rem;
+  border-radius: 15px;
+}
+
+button{
+  background-color: lightgrey !important;
+  color:black;
+  background-position: 50%;
+  width: 25vh;
+}
 
