--- a/src/app/componentes/plato/plato.component.html
+++ b/src/app/componentes/plato/plato.component.html
@@ -1,5 +1,49 @@
 
+<div class="main-component">
+  <div class="card m-5" style="width: 18rem;">
+    <a id="titulo" href="#"><strong>Macarrones</strong></a>
+    <a id="precio" href="#">4€</a>
+    <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
+    <div class="card-body">
+      <a id="titulo" href="#">Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</a>
+      <a href="#" class="btn btn-warning">Modificar</a>
+      <a href="#" class="btn btn-danger">Eliminar</a>
+    </div>
+  </div>
 
+  <div class="card m-5" style="width: 18rem;">
+    <a id="titulo" href="#">Macarrones</a>
+    <a id="precio" href="#">4€</a>
+    <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
+    <div class="card-body">
+      <a id="titulo" href="#">Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</a>
+      <a href="#" class="btn btn-warning">Modificar</a>
+      <a href="#" class="btn btn-danger">Eliminar</a>
+    </div>
+  </div>
+
+<!--   <div class="card m-5" style="width: 18rem;">
+    <a id="titulo" href="#"><strong>Modificar</strong></a>
+    <a id="precio" href="#"><strong>4€</strong></a>
+    <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
+    <div class="card-body">
+      <a id="titulo" href="#"><strong>Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</strong></a>
+      <a href="#" class="btn btn-warning">Actualizar</a>
+      <a href="#" class="btn btn-danger">Eliminar</a>
+    </div>
+  </div>
+</div> -->
+<!-- <div class="card m-5" style="width: 18rem;">
+  <a id="titulo" href="#"><strong>Macarrones</strong></a>
+  <a id="precio" href="#"><strong>4€</strong></a>
+  <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
+  <div class="card-body">
+    <a id="titulo" href="#"><strong>Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</strong></a>
+    <a href="#" class="btn btn-warning">Actualizar</a>
+    <a href="#" class="btn btn-danger">Eliminar</a>
+  </div>
+</div> -->
+<!--
 <div class="card m-5" style="width: 18rem;">
   <a id="titulo" href="#"><strong>Macarrones</strong></a>
   <a id="precio" href="#"><strong>4€</strong></a>
@@ -44,16 +88,6 @@
   </div>
 </div>
 
-<div class="card m-5" style="width: 18rem;">
-  <a id="titulo" href="#"><strong>Macarrones</strong></a>
-  <a id="precio" href="#"><strong>4€</strong></a>
-  <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
-  <div class="card-body">
-    <a id="titulo" href="#"><strong>Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</strong></a>
-    <a href="#" class="btn btn-warning">Actualizar</a>
-    <a href="#" class="btn btn-danger">Eliminar</a>
-  </div>
-</div>
 
 <div class="card m-5" style="width: 18rem;">
   <a id="titulo" href="#"><strong>Macarrones</strong></a>
@@ -75,41 +109,7 @@
     <a href="#" class="btn btn-warning">Actualizar</a>
     <a href="#" class="btn btn-danger">Eliminar</a>
   </div>
-</div>
-
-<div class="card m-5" style="width: 18rem;">
-  <a id="titulo" href="#"><strong>Macarrones</strong></a>
-  <a id="precio" href="#"><strong>4€</strong></a>
-  <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
-  <div class="card-body">
-    <a id="titulo" href="#"><strong>Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</strong></a>
-    <a href="#" class="btn btn-warning">Actualizar</a>
-    <a href="#" class="btn btn-danger">Eliminar</a>
-  </div>
-</div>
-
-
-<div class="card m-5" style="width: 18rem;">
-  <a id="titulo" href="#"><strong>Macarrones</strong></a>
-  <a id="precio" href="#"><strong>4€</strong></a>
-  <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
-  <div class="card-body">
-    <a id="titulo" href="#"><strong>Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</strong></a>
-    <a href="#" class="btn btn-warning">Actualizar</a>
-    <a href="#" class="btn btn-danger">Eliminar</a>
-  </div>
-</div>
-
-<div class="card m-5" style="width: 18rem;">
-  <a id="titulo" href="#"><strong>Macarrones</strong></a>
-  <a id="precio" href="#"><strong>4€</strong></a>
-  <img src="../../../assets/img/macarrones.jpg" class="card-img-top" alt="macarrones">
-  <div class="card-body">
-    <a id="titulo" href="#"><strong>Pasta alimenticia en forma de macarrón elaborada a base de sémola de trigo ecológica con tomate y verdura.</strong></a>
-    <a href="#" class="btn btn-warning">Actualizar</a>
-    <a href="#" class="btn btn-danger">Eliminar</a>
-  </div>
-</div>
+</div> -->
 
 
 
