--- a/src/app/componentes/plato/plato.component.scss
+++ b/src/app/componentes/plato/plato.component.scss
@@ -1,13 +1,32 @@
+
+.main-component{
+  position: relative;
+  height:100vh;
+  max-width: 100%;
+  max-height: 100%;
+  background-size:cover;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  background-image: url(../../../assets/img/8P3A0330.jpg);
+}
+
 .card {
-  display: block;
-  float: left;
+  display:inline-block;
+  background-color: black;
+  opacity:70%;
+
+
 }
 
 a {
   margin-left: 22px;
   text-decoration: none;
+  color: white;
 }
 
 #precio {
   margin-left: 160px;
 }
+
+
+
