--- a/src/app/componentes/reserva/reserva.component.html
+++ b/src/app/componentes/reserva/reserva.component.html
@@ -1,4 +1,3 @@
-impo
 
 <div class="loginImg">
   <ng-container [ngSwitch]="stepperOrientation | async">
@@ -14,65 +13,107 @@ impo
         <!-- FECHA -->
         <mat-step [stepControl]="firstFormGroup" label="Día de la reserva">
           <form [formGroup]="firstFormGroup">
-
             <mat-form-field color="accent" appearance="fill">
               <mat-label>Elije la fecha</mat-label>
-              <input matInput [matDatepicker]="picker2">
+              <input matInput formControlName="fechaReserva" [matDatepicker]="picker2">
               <mat-hint>dia/mes/año</mat-hint>
               <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
               <mat-datepicker #picker2 color="primary"></mat-datepicker>
             </mat-form-field>
-            <p>Tu día de reserva es: </p>
+            <p>Tu día de reserva es: {{firstFormGroup.controls['fechaReserva'].value | date: 'dd/MM/yyyy'}}</p>
             <div>
-              <button mat-raised-button color="accent" matStepperNext>Siguente</button>
+              <button class="button-fecha" mat-raised-button color="accent" matStepperNext>Siguente</button>
             </div>
 
           </form>
         </mat-step>
 
         <!-- FRANJA HORARIA -->
-        <mat-step [stepControl]="firstFormGroup" label="Franja horaria de la reserva">
-        <form [formGroup]="secondFormGroup">
+        <mat-step [stepControl]="secondFormGroup" label="Franja horaria de la reserva">
+          <form [formGroup]="secondFormGroup">
 
-          <mat-form-field color="accent" appearance="fill">
-            <mat-label>Elige la franja horaria</mat-label>
-            <mat-select [(ngModel)]="selectedValue" name="food">
-              <mat-option *ngFor="let food of foods" [value]="food.value">
-                {{food.viewValue}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <p> Tu franja horaria: {{selectedValue}} </p>
-          <div>
-            <button mat-raised-button color="accent" matStepperNext>Siguente</button>
-          </div>
-        </form>
-      </mat-step>
-
-
-      <!-- PLATOS -->
-      <mat-step [stepControl]="thirdFormGroup" label="Platos de la reserva">
-        <form [formGroup]="thirdFormGroup">
-        <h4>mat-select</h4>
-        <mat-form-field appearance="fill">
-          <mat-label>Elige los platos</mat-label>
-          <mat-select [formControl]="foodControl" name="food">
-            <mat-option>None</mat-option>
-            <mat-option *ngFor="let food of foods" [value]="food.value">
-              {{food.viewValue}}
-            </mat-option>
-          </mat-select>
-           </mat-form-field>
-        <p>Selected: {{foodControl.value}}</p>
-        <div>
-          <button mat-raised-button color="accent" matStepperNext>Siguente</button>
-        </div>
-      </form>
-    </mat-step>
+            <mat-form-field color="accent" appearance="fill">
+              <mat-label>Elige la franja horaria</mat-label>
+              <mat-select formControlName="franjaReserva" name="food">
+                <mat-option *ngFor="let franja of franjas" [value]="franja.value">
+                  {{franja.value}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <p> Tu franja horaria: {{secondFormGroup.controls['franjaReserva'].value}} </p>
+            <div>
+              <button mat-raised-button color="accent" matStepperPrevious>Anterior</button>
+              <button mat-raised-button color="accent" matStepperNext>Siguente</button>
+            </div>
+          </form>
+        </mat-step>
 
 
-       <!-- CONFIRMACIÓN DATOS  -->
-       <mat-step [stepControl]="thirdFormGroup" label="Confirmar la reserva">
+        <!-- PLATOS -->
+        <mat-step [stepControl]="thirdFormGroup" label="Platos de la reserva">
+          <form [formGroup]="thirdFormGroup">
+
+            <div class="row">
+              <div class="col-3">
+                <mat-form-field appearance="fill">
+                  <mat-label>Elige ensalada</mat-label>
+                  <mat-select formControlName="ensaladaPlato">
+                    <mat-option *ngFor="let ensalada of ensaladas" [value]="plato.value">
+                      {{ensalada.value}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="col-3">
+                <mat-form-field appearance="fill">
+                  <mat-label>Elige primer plato</mat-label>
+                  <mat-select formControlName="primerPlato" >
+                    <mat-option *ngFor="let plato of primerPlato" [value]="plato.value">
+                      {{plato.value}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="col-3">
+                <mat-form-field appearance="fill">
+                  <mat-label>Elige segundo plato</mat-label>
+                  <mat-select formControlName="segundoPlato" >
+                    <mat-option *ngFor="let plato of platos" [value]="plato.value">
+                      {{plato.value}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="col-3">
+                <mat-form-field appearance="fill">
+                  <mat-label>Elige postre</mat-label>
+                  <mat-select formControlName="postrePlato">
+                    <mat-option *ngFor="let plato of platos" [value]="plato.value">
+                      {{plato.value}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+            </div>
+
+            <!-- <p>PlatoSeleccionado: {{thirdFormGroup.controls['platoReserva'].value}}</p> -->
+
+            <div class="row button-reserva">
+              <div class="col-4"></div>
+              <div class="col-4"></div>
+              <div class="col-4">
+                <button mat-raised-button color="accent" matStepperPrevious>Anterior</button>
+                <button mat-raised-button color="accent" matStepperNext>Hacer reserva</button>
+              </div>
+            </div>
+
+
+          </form>
+        </mat-step>
+
+
+        <!-- CONFIRMACIÓN DATOS  -->
+        <!--        <mat-step [stepControl]="thirdFormGroup" label="Confirmar la reserva">
         <form [formGroup]="thirdFormGroup">
 
           <mat-form-field color="accent" appearance="fill">
@@ -88,15 +129,13 @@ impo
             <button mat-raised-button color="accent" matStepperNext>Siguente</button>
           </div>
         </form>
-      </mat-step>
+      </mat-step> -->
 
 
         <mat-step>
           <ng-template matStepLabel>Hecho</ng-template>
-          <p>You are now done.</p>
-          <div>
-            <button mat-button matStepperPrevious>Back</button>
-          </div>
+          <p>¡Reserva hecha con éxito!</p>
+
         </mat-step>
       </mat-stepper>
     </div>
