--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="container loginContainer">
 
     <div class="row">
-      <span class="loginTitle">Bienvenido! Identifícate para entrar en la aplicación</span>
+      <span class="loginTitle">¡Bienvenido! Identifícate para entrar en la aplicación</span>
     </div>
     <div class="row" >
       <form  [formGroup]="form">
@@ -39,7 +39,7 @@
     </div>
 
     <div class="row mt-4 pb-2">
-      <span class="loginTitle "><a routerLink="/register">Crear una cuenta</a></span>
+      <span class="loginTitle "><a routerLink="/registro">Crear una cuenta</a></span>
     </div>
   </div>
 </div>
