creado header, footer y cambios componente plato

--- a/src/app/componentes/plato/plato.component.html
+++ b/src/app/componentes/plato/plato.component.html
@@ -1,5 +1,5 @@
 
-<div class="main-component">
+<!-- <div class="main-component">
   <div class="card m-5" style="width: 18rem;">
     <a id="titulo" href="#"><strong>Macarrones</strong></a>
     <a id="precio" href="#">4€</a>
@@ -20,7 +20,187 @@
       <a href="#" class="btn btn-warning">Modificar</a>
       <a href="#" class="btn btn-danger">Eliminar</a>
     </div>
+  </div> -->
+
+
+  <div class="main-component">
+
+    <div class="row">
+      <mat-toolbar class="bg-toolbar">
+
+        <span class="example-spacer"></span>
+
+        <input type="text" class="form-control maxWidthInput" placeholder="Search">
+        <button type="button" class="btn btn-warning">Search</button>
+      </mat-toolbar>
+    </div>
+
+    <div class="row">
+
+      <div class="col-3">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Borsch ucraniano</mat-card-title>
+        <mat-card-subtitle>6.00€</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="../../../assets/img/borsch2.JPG">
+      <mat-card-content>
+        <p>
+          El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+        </p>
+      </mat-card-content>
+      <mat-card-actions class="buttons-center">
+        <button mat-button>MODIFICAR</button>
+        <button mat-button>ELIMINAR</button>
+      </mat-card-actions>
+    </mat-card>
+      </div>
+
+      <div class="col-3">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Varenyky</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/varenyki2.JPG">
+          <mat-card-content>
+            <p>
+              El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+          </div>
+
+          <div class="col-3">
+            <mat-card class="example-card">
+              <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <mat-card-title>Goulash húngaro</mat-card-title>
+                <mat-card-subtitle>6.00€</mat-card-subtitle>
+              </mat-card-header>
+              <img mat-card-image src="../../../assets/img/goulash1.JPG">
+              <mat-card-content>
+                <p>
+                  El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                </p>
+              </mat-card-content>
+              <mat-card-actions class="buttons-center">
+                <button mat-button>MODIFICAR</button>
+                <button mat-button>ELIMINAR</button>
+              </mat-card-actions>
+            </mat-card>
+              </div>
+
+
+      <div class="col-3">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Patata de la casa</mat-card-title>
+        <mat-card-subtitle>6.00€</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="../../../assets/img/patata1.JPG">
+      <mat-card-content>
+        <p>
+          El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+        </p>
+      </mat-card-content>
+      <mat-card-actions class="buttons-center">
+        <button mat-button>MODIFICAR</button>
+        <button mat-button>ELIMINAR</button>
+      </mat-card-actions>
+    </mat-card>
+      </div>
+
+      <div class="col-3">
+        <mat-card class="example-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Borsch</mat-card-title>
+            <mat-card-subtitle>6.00€</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image src="../../../assets/img/goulash1.JPG">
+          <mat-card-content>
+            <p>
+              El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+            </p>
+          </mat-card-content>
+          <mat-card-actions class="buttons-center">
+            <button mat-button>MODIFICAR</button>
+            <button mat-button>ELIMINAR</button>
+          </mat-card-actions>
+        </mat-card>
+          </div>
+
+          <div class="col-3">
+            <mat-card class="example-card">
+              <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <mat-card-title>Borsch</mat-card-title>
+                <mat-card-subtitle>6.00€</mat-card-subtitle>
+              </mat-card-header>
+              <img mat-card-image src="../../../assets/img/goulash1.JPG">
+              <mat-card-content>
+                <p>
+                  El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                </p>
+              </mat-card-content>
+              <mat-card-actions class="buttons-center">
+                <button mat-button>MODIFICAR</button>
+                <button mat-button>ELIMINAR</button>
+              </mat-card-actions>
+            </mat-card>
+              </div>
+
+              <div class="col-3">
+                <mat-card class="example-card">
+                  <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title>Borsch</mat-card-title>
+                    <mat-card-subtitle>6.00€</mat-card-subtitle>
+                  </mat-card-header>
+                  <img mat-card-image src="../../../assets/img/goulash1.JPG">
+                  <mat-card-content>
+                    <p>
+                      El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                    </p>
+                  </mat-card-content>
+                  <mat-card-actions class="buttons-center">
+                    <button mat-button>MODIFICAR</button>
+                    <button mat-button>ELIMINAR</button>
+                  </mat-card-actions>
+                </mat-card>
+                  </div>
+
+
+                  <div class="col-3">
+                    <mat-card class="example-card">
+                      <mat-card-header>
+                        <div mat-card-avatar class="example-header-image"></div>
+                        <mat-card-title>Borsch</mat-card-title>
+                        <mat-card-subtitle>6.00€</mat-card-subtitle>
+                      </mat-card-header>
+                      <img mat-card-image src="../../../assets/img/goulash1.JPG">
+                      <mat-card-content>
+                        <p>
+                          El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                        </p>
+                      </mat-card-content>
+                      <mat-card-actions class="buttons-center">
+                        <button mat-button>MODIFICAR</button>
+                        <button mat-button>ELIMINAR</button>
+                      </mat-card-actions>
+                    </mat-card>
+                      </div>
+      </div>
   </div>
+
 
 <!--   <div class="card m-5" style="width: 18rem;">
     <a id="titulo" href="#"><strong>Modificar</strong></a>
