--- a/src/app/componentes/plato/crear-plato/crear-plato.component.scss
+++ b/src/app/componentes/plato/crear-plato/crear-plato.component.scss
@@ -16,8 +16,8 @@
   background-image: url(../../../../assets/img/registro.jpg);
 }
 
-
-form{
+/* FORM Y BUTTON - SETTINGS ANTERIORES */
+/* form{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,5 +31,73 @@ button{
   color:black;
   background-position: 50%;
   width: 25vh;
+} */
+
+.loginContainer{
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 35rem;
+  background-color:  #171a1d;
+  opacity: 0.65;
+  border-radius: 15px;
 }
+
+.loginTitle{
+  letter-spacing: 1px;
+  font-family: system-ui;
+  text-align: center;
+
+
+  a {
+    text-decoration: none;
+  }
+}
+
+/* .hint {
+  position: absolute;
+  left: 5px;
+  right: auto;
+  bottom: 0px;
+  font-size: 14px;
+  line-height: 14px;
+  transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
+  color: grey;
+}
+ */
+#fileUpload {
+  position: absolute;
+
+  z-index: 9;
+  opacity: 9;
+  height: 100%;
+  width: 100%;
+  left: 0px;
+  top: 0px;
+  cursor: pointer;
+
+}
+
+#formFile{
+background-color: rosybrown !important;
+}
+
+.elige-imagen{
+  font-size: small;
+  font-weight: lighter;
+}
+
+.button-crear{
+  margin-bottom: 3%;
+}
+
+.file-input {
+  opacity: 3;
+}
+
+
+
+
 
