--- a/src/app/componentes/plato/plato.component.scss
+++ b/src/app/componentes/plato/plato.component.scss
@@ -1,16 +1,22 @@
 
 .main-component{
   position: relative;
+/*   display: flex; */
+
   height:100vh;
-  max-width: 100%;
+  max-width:100%;
   max-height: 100%;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
   object-fit: contain;
   background-image: url(../../../assets/img/8P3A0330.jpg);
+  overflow-x: hidden;
+
 }
 
-.card {
+
+
+/* .card {
   display:inline-block;
   background-color: black;
   opacity:70%;
@@ -26,7 +32,52 @@ a {
 
 #precio {
   margin-left: 160px;
+} */
+
+.example-card {
+  max-width: 300px;
+  margin-top:9%;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+/*   background-color: rgb(73, 65, 65); */
+/*   background-color: rgb(59, 53, 53); */
+  background-color: rgb(76, 69, 69);
+
 }
+
+.example-header-image {
+  background-image: url(../../../assets/img/borsch-4260907_960_720.jpg);
+  background-size: cover;
+}
+
+p{
+ font-size: small;
+ text-align: justify;
+}
+
+.buttons-center{
+  text-align: center;
+}
+
+button{
+  background-color: rgb(59, 55, 55);
+}
+
+.maxWidthInput{
+  max-width: 15vw !important;
+}
+
+.bg-toolbar{
+  background-color: black;
+  color: goldenrod;
+}
+
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
 
 
 
