--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<mat-toolbar>
+  <div class="footer-style">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon> restaurant</mat-icon>
+    </button>
+    <span>© All rights reserved 2022</span>
+  </div>
+</mat-toolbar>
