--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,10 +1,20 @@
-<mat-toolbar>
-<!--   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-  </button> -->
-  <span>Comedor App</span>
-  <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>fastfood</mat-icon>
-  </button>
 
+<mat-toolbar>
+  <div class="header-style">
+    <span>Comedor App </span>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>restaurant</mat-icon>
+    </button>
+  </div>
+  <span class="example-spacer"></span>
+  <div class="user-area">
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <mat-icon>person</mat-icon>
+      <mat-icon>power_settings_new</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
+
+
+
+
