--- a/src/app/componentes/plato/plato.component.html
+++ b/src/app/componentes/plato/plato.component.html
@@ -25,15 +25,13 @@
 
   <div class="main-component">
 
-    <div class="row">
+ <!--    <div class="row">
       <mat-toolbar class="bg-toolbar">
-
         <span class="example-spacer"></span>
-
-        <input type="text" class="form-control maxWidthInput" placeholder="Search">
-        <button type="button" class="btn btn-warning">Search</button>
+        <input type="text" class="form-control maxWidthInput" placeholder="Buscar">
+        <button type="button" class="btn btn-secondary button-search">Buscar</button>
       </mat-toolbar>
-    </div>
+    </div> -->
 
     <div class="row">
 
@@ -41,13 +39,13 @@
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Borsch ucraniano</mat-card-title>
+        <mat-card-title>Borsch</mat-card-title>
         <mat-card-subtitle>6.00€</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image src="../../../assets/img/borsch2.JPG">
       <mat-card-content>
         <p>
-          El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+          La sabrosa y aromática sopa de remolacha llamada borsch.
         </p>
       </mat-card-content>
       <mat-card-actions class="buttons-center">
@@ -67,7 +65,7 @@
           <img mat-card-image src="../../../assets/img/varenyki2.JPG">
           <mat-card-content>
             <p>
-              El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+              "Media lunas" rellenas de puré de patata, setas y requesón.
             </p>
           </mat-card-content>
           <mat-card-actions class="buttons-center">
@@ -81,13 +79,13 @@
             <mat-card class="example-card">
               <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title>Goulash húngaro</mat-card-title>
+                <mat-card-title>Goulash</mat-card-title>
                 <mat-card-subtitle>6.00€</mat-card-subtitle>
               </mat-card-header>
               <img mat-card-image src="../../../assets/img/goulash1.JPG">
               <mat-card-content>
                 <p>
-                  El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                  Sopa de carne de buey con cebollas y páprica.
                 </p>
               </mat-card-content>
               <mat-card-actions class="buttons-center">
@@ -97,6 +95,7 @@
             </mat-card>
               </div>
 
+              <div class="col-3"></div>
 
       <div class="col-3">
     <mat-card class="example-card">
@@ -108,7 +107,7 @@
       <img mat-card-image src="../../../assets/img/patata1.JPG">
       <mat-card-content>
         <p>
-          El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+          Patatas de la huerta con salsa de mantequilla y eneldo.
         </p>
       </mat-card-content>
       <mat-card-actions class="buttons-center">
@@ -122,13 +121,13 @@
         <mat-card class="example-card">
           <mat-card-header>
             <div mat-card-avatar class="example-header-image"></div>
-            <mat-card-title>Borsch</mat-card-title>
+            <mat-card-title>Salmón a la plancha</mat-card-title>
             <mat-card-subtitle>6.00€</mat-card-subtitle>
           </mat-card-header>
-          <img mat-card-image src="../../../assets/img/goulash1.JPG">
+          <img mat-card-image src="../../../assets/img/salmon5.JPG">
           <mat-card-content>
             <p>
-              El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             </p>
           </mat-card-content>
           <mat-card-actions class="buttons-center">
@@ -148,7 +147,7 @@
               <img mat-card-image src="../../../assets/img/goulash1.JPG">
               <mat-card-content>
                 <p>
-                  El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                  El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana.
                 </p>
               </mat-card-content>
               <mat-card-actions class="buttons-center">
@@ -157,6 +156,8 @@
               </mat-card-actions>
             </mat-card>
               </div>
+
+              <div class="col-3"></div>
 
               <div class="col-3">
                 <mat-card class="example-card">
@@ -168,7 +169,7 @@
                   <img mat-card-image src="../../../assets/img/goulash1.JPG">
                   <mat-card-content>
                     <p>
-                      El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana. Entre los ingredientes principales de esta sopa (remolacha, zanahoria, patata, apio, perejil, eneldo, cebolla, ajo, tomate y carne) destaca la remolacha - protagonista que transmite al potaje su color emblemático. Estamos seguros que el olor inmejorable junto con el sabor impecable de nuestro borsch recién preparado te va a alegrar el día.
+                      El sabroso y aromático borsch es la tarjeta de visita de la rica cocina ucraniana.
                     </p>
                   </mat-card-content>
                   <mat-card-actions class="buttons-center">
