--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -12,3 +12,31 @@
   border-bottom: 2px solid grey;
 }
  */
+
+/*  .maxWidthInput{
+   max-width: 15vw;
+ } */
+
+ .search-style {
+  font-size: small;
+  margin-right: 5px;
+
+}
+
+.example-button {
+  display: block;
+  margin: 80px auto 400px;
+}
+
+.example-container {
+  height: 200px;
+  overflow: auto;
+  border: 1px solid #ccc;
+}
+
+.button-search{
+  background-color: rgb(58, 54, 54) !important;
+  font-size: small;
+}
+
+
